--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,7 @@ $(top_builddir)/graphviz_version.h: config.h
 EXTRA_DIST = $(txt) $(html) graphviz.spec.in graphviz.spec \
 	autogen.sh config/depcomp config/config.rpath \
 	builddate.h ast_common.h.in compat.h \
-	Makeargs compat_getopt.h iffe config.iffe \
+	Makeargs iffe config.iffe \
 	m4/README m4/iconv.m4 m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
 	graphviz.7 Doxyfile.in Doxyfile features awk \
 	config/config_perl.pl config/config_python.py \
