Removed unsed vcproj files from DIST targets.

--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -72,6 +72,6 @@ endif
 gvc.3.pdf: $(srcdir)/gvc.3
 	- @GROFF@ -Tps -man $(srcdir)/gvc.3 | @PS2PDF@ - - > gvc.3.pdf
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) gvc.vcproj
+EXTRA_DIST = $(man_MANS) $(pdf_DATA)
 
 DISTCLEANFILES = $(pdf_DATA)
