Remove define and usage of HAVE_STDLIB_H
The header stdlib.h is always present since we are compiling with standard C.
There is no need for this check, since it will always evaluate to true.

--- a/configure.ac
+++ b/configure.ac
@@ -425,7 +425,7 @@ dnl -----------------------------------
 dnl Checks for header files
 
 # AC_HEADER_STDC
-AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h stdlib.h stdint.h malloc.h \
+AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h stdint.h malloc.h \
 	fcntl.h search.h pthread.h values.h float.h limits.h termios.h \
 	errno.h time.h unistd.h fenv.h string.h strings.h inttypes.h setjmp.h \
 	sys/time.h sys/times.h sys/types.h sys/select.h fpu_control.h \
