Windows: same runtime library option for getopt
The Release configuration of the getopt library used a different runtime
library option than the other projects. This is fixed now.

--- a/windows/getopt/getopt.vcxproj
+++ b/windows/getopt/getopt.vcxproj
@@ -98,6 +98,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
