--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ install:
   - cd windows\dependencies\libgd
   - mkdir deps
   - cd deps
-  - ps: wget http://windows.php.net/downloads/php-sdk/deps/vc14/x86/freetype-2.6.2-vc14-x86.zip -O freetype.zip
+  - ps: wget http://windows.php.net/downloads/php-sdk/deps/vc14/x86/archives/freetype-2.6.2-vc14-x86.zip -O freetype.zip
   - ps: wget http://windows.php.net/downloads/php-sdk/deps/vc14/x86/libiconv-1.14-vc14-x86.zip -O iconv.zip
   - ps: wget http://windows.php.net/downloads/php-sdk/deps/vc14/x86/libjpeg-9b-vc14-x86.zip -O jpeg.zip
   - ps: wget http://windows.php.net/downloads/php-sdk/deps/vc14/x86/libpng-1.6.21-vc14-x86.zip -O png.zip
@@ -42,7 +42,7 @@ install:
 
       set WITH_DEVEL=deps
 
-      set WITH_BUILD=gdbuild
+      set WITH_BUILD=build
 
       nmake /f windows/Makefile.vc build_libs
 
