Replace checks for <stdint.h> and <inttypes.h>
Instead of checking for the availability of stdint.h and inttypes.h with HAVE_STDINT_H and HAVE_INTTYPES_H, simply include stdint.h. The header stdint.h is part of the C99 standard, so it can be safely assumed that this header is present.
inttypes.h contains everything stdint.h includes, but in all cases here, stdint.h suffices.

--- a/configure.ac
+++ b/configure.ac
@@ -425,9 +425,9 @@ dnl -----------------------------------
 dnl Checks for header files
 
 # AC_HEADER_STDC
-AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h stdint.h malloc.h \
+AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h malloc.h \
 	fcntl.h search.h pthread.h values.h float.h limits.h termios.h \
-	errno.h time.h unistd.h fenv.h strings.h inttypes.h setjmp.h \
+	errno.h time.h unistd.h fenv.h strings.h setjmp.h \
 	sys/time.h sys/times.h sys/types.h sys/select.h fpu_control.h \
 	sys/fpu.h sys/socket.h sys/stat.h sys/mman.h \
 	sys/ioctl.h sys/inotify.h langinfo.h libintl.h crt_externs.h)
@@ -3039,12 +3039,7 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([[#include <stdio.h>
 
 AC_MSG_CHECKING(if intptr_t is declared)
 AC_LINK_IFELSE([AC_LANG_PROGRAM([[#include <stdlib.h>
-	#if HAVE_STDINT_H
-	#include <stdint.h>
-	#endif
-	#if HAVE_INTTYPES_H
-	#include <inttypes.h>
-	#endif
+  #include <stdint.h>
 	#if HAVE_UNISTD_H
 	#include <unistd.h>
 	#endif
