Add library for computing Simmelian backbones of graphs.

--- a/configure.ac
+++ b/configure.ac
@@ -3145,6 +3145,7 @@ AC_CONFIG_FILES(Makefile
 	lib/ast/Makefile
 	lib/sfio/Makefile
 	lib/sfio/Sfio_f/Makefile
+	lib/spine/Makefile
 	lib/vmalloc/Makefile
 	lib/dotgen/Makefile
 	lib/neatogen/Makefile
