missing TCL_EXEC_PREFIX substitution

--- a/configure.ac
+++ b/configure.ac
@@ -1776,7 +1776,7 @@ TCL_LIBS=
 AC_SUBST([TCL_LIBS])
 
 #AC_SUBST([TCL_PREFIX])
-#AC_SUBST([TCL_EXEC_PREFIX])
+AC_SUBST([TCL_EXEC_PREFIX])
 #AC_SUBST([TCL_SHLIB_CFLAGS])
 #AC_SUBST([TCL_SHLIB_CXXFLAGS])
 #AC_SUBST([TCL_EXTRA_CFLAGS])
