Python script to generate a graph for every shape
The start of a regression test with Python. This script generates a gv
output for every available shape, the most basic output type.

--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ rtest/ndata
 rtest/nhtml
 tests/**/*.log
 tests/**/*.trs
+tests/**/output/**
 
 ## Binaries
 tests/unit_tests/lib/common/command_line
