Compare output `shapes.py` to reference files
The reference files in `shapes/reference` are generated by the most recent
version of Graphviz. They will serve as a comparison for later versions to
verify the output.
`shapes.py` compares the generated files stored in `output` with the
reference files, by checking equality.

--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,7 @@ rtest/nhtml
 tests/**/*.log
 tests/**/*.trs
 tests/**/output/**
+tests/**/difference/**
 
 ## Binaries
 tests/unit_tests/lib/common/command_line
@@ -227,3 +228,6 @@ tests/unit_tests/lib/common/command_line
 
 # Don't ignore any of the submodules
 !windows/dependencies/**
+
+# Python byte code
+*.pyc
