--- a/lib/vmalloc/Makefile.am
+++ b/lib/vmalloc/Makefile.am
@@ -5,7 +5,7 @@ noinst_HEADERS = vmalloc.h vmhdr.h
 noinst_LTLIBRARIES = libvmalloc_C.la
 
 libvmalloc_C_la_SOURCES = malloc.c vmbest.c vmclear.c vmclose.c vmdcheap.c \
-	vmdebug.c vmdisc.c vmexit.c vmlast.c vmopen.c vmpool.c vmprivate.c \
+	vmdebug.c vmdisc.c vmlast.c vmopen.c vmpool.c vmprivate.c \
 	vmprofile.c vmregion.c vmsegment.c vmset.c vmstat.c vmstrdup.c \
 	vmtrace.c vmwalk.c
 
