Change lib/common/types.h.in -> lib/common/types.h
The only Autotools check in types.h.in is for `WITH_CGRAPH`, which is
always true for legacy reasons. Therefore we can set this define and turn
it in a regular header file.

--- a/configure.ac
+++ b/configure.ac
@@ -212,7 +212,7 @@ AM_INIT_AUTOMAKE([no-define])
 # Suppress verbose compile lines
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
-AC_CONFIG_HEADERS([config.h lib/common/types.h])
+AC_CONFIG_HEADERS([config.h])
 
 # put BUILDDATE in its own file so that only targets that use it get rebuilt
 echo "#define BUILDDATE \"$GRAPHVIZ_VERSION_DATE\"" > builddate.h
