fix pangocairo breakage from last commit

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -169,7 +169,7 @@ BuildRequires: golang >= 1.2 gcc-go swig >= 3.0.2
 %if %fedora <= 24
 %define PHP 1
 BuildRequires: php-devel
-# disable PHP7 in fc25 until swig supports it
+# disable PHP7 in fc25 until swig supports it - requires swig-3.0.11
 %endif
 %endif
 
