Enhanced Travis Nightly Release
Instead of publishing a new release with an "untagged" name on every
Travis build, this configuration will deploy all these nightlies to a
special Nightly release tag.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ before_deploy:
 - echo "deploying ${DEPLOYED_FILE} to GitHub releases"
 - sudo chown travis ${DEPLOYED_FILE}
 
+# If no tag is set, deploy as nightly
+- if [ !${TRAVIS_TAG} ] ; then export TRAVIS_TAG=Nightly ; fi
+
 deploy:
   provider: releases
   api_key:
