--- a/configure.ac
+++ b/configure.ac
@@ -429,7 +429,7 @@ AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h malloc.h \
 	fcntl.h search.h pthread.h values.h float.h limits.h termios.h \
 	errno.h time.h unistd.h strings.h setjmp.h \
 	sys/time.h sys/times.h sys/types.h sys/select.h \
-	sys/socket.h sys/stat.h sys/mman.h \
+	sys/stat.h sys/mman.h \
 	sys/ioctl.h sys/inotify.h langinfo.h libintl.h crt_externs.h)
 AC_HEADER_TIME
 AC_HEADER_DIRENT
