email notifications going to Erwin?? Try to over-ride

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,3 +54,8 @@ deploy:
   on:
     repo: ellson/graphviz
     condition: ${DOCKER_BUILD} == "FALSE"
+
+
+notifications:
+  email:
+  - john.ellson@comcast.net
