Remove definition and usage of HAVE_TIME_H
The header <time.h> is part of the standard C library and is always
available, checking is therefore not needed.

--- a/configure.ac
+++ b/configure.ac
@@ -427,7 +427,7 @@ dnl Checks for header files
 # AC_HEADER_STDC
 AC_CHECK_HEADERS(malloc.h \
 	fcntl.h search.h pthread.h values.h limits.h termios.h \
-	errno.h time.h unistd.h strings.h setjmp.h \
+	errno.h unistd.h strings.h setjmp.h \
 	sys/time.h sys/times.h sys/types.h sys/select.h \
 	sys/stat.h sys/mman.h \
 	sys/ioctl.h sys/inotify.h langinfo.h libintl.h crt_externs.h)
