Remove unused header checks and defines
congigure.ac checkes for the presence of header files and creates
define indicating if it was found. Some of these defines are never
used, so the check (and the static define for Windows) can be safely
removed. This is the case for the following headers:
- langinfo.h
- libintl.h
- pthread.h
- setjmp.h
- sys/times.h

--- a/configure.ac
+++ b/configure.ac
@@ -426,11 +426,11 @@ dnl Checks for header files
 
 # AC_HEADER_STDC
 AC_CHECK_HEADERS(malloc.h \
-	fcntl.h search.h pthread.h values.h limits.h termios.h \
-	errno.h unistd.h strings.h setjmp.h \
-	sys/time.h sys/times.h sys/types.h sys/select.h \
+	fcntl.h search.h values.h limits.h termios.h \
+	errno.h unistd.h strings.h \
+	sys/time.h sys/types.h sys/select.h \
 	sys/stat.h sys/mman.h \
-	sys/ioctl.h sys/inotify.h langinfo.h libintl.h crt_externs.h)
+	sys/ioctl.h sys/inotify.h crt_externs.h)
 AC_HEADER_TIME
 AC_HEADER_DIRENT
 AC_HEADER_STDBOOL
